# druid_camera

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/gui/: mod.rs
src/gui/controller/: cmd.rs  video.rs
src/gui/data/: mod.rs  video.rs
src/gui/ui/: mod.rs  playback.rs
src/gui/widgets/: empty.rs  icons.rs  mod.rs  theme.rs  video.rs
src/media/: thumbnail.rs
